Ver9 index.html

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -54,6 +54,7 @@
 
   <main class="center">
     <h1 class="title">คิวอาร์โค้ด</h1>
+    <h1 class="title" style="color:#FF0000;">*สำคัญห้ามหาย*</h1>
 
     <div id="sizeLabel" class="size">ขนาด: —</div>
 
