--- a/front-end/index.html
+++ b/front-end/index.html
@@ -17,14 +17,8 @@
     .qr-box{display:flex; align-items:center; justify-content:center; background:var(--card); padding:18px; border-radius:22px; box-shadow:var(--shadow); min-height: calc(min(78vw, 360px) + 36px);}
     img.qr{ width:min(78vw, 360px); height:auto; aspect-ratio:1/1; border-radius:16px; background:#fff; display:block; }
     .uuid{font-family:ui-monospace, SFMono-Regular, Menlo, Consolas, monospace; font-size:.95rem; color:var(--muted); word-break:break-all; text-align:center;}
-
-    /* ปุ่มใต้ QR: ใช้ flex เพื่อให้สองปุ่มที่เหลืออยู่กลางเมื่อปุ่มสุ่มถูกซ่อน */
-    .btns{
-      display:flex; justify-content:center; align-items:center;
-      gap:10px; width:min(92vw, 440px); flex-wrap:wrap;
-    }
-    .btns > center{ display: contents; } /* เผื่อมี <center> ครอบปุ่ม */
-
+    .btns{ display:flex; justify-content:center; align-items:center; gap:10px; width:min(92vw, 440px); flex-wrap:wrap; }
+    .btns > center{ display: contents; }
     button{appearance:none; border:none; cursor:pointer; padding:12px 14px; border-radius:14px; font-weight:800; background:var(--accent); color:#fff; box-shadow:var(--shadow); min-height:44px;}
     .btn-dark{background:#111827;}
     .btn-good{background:#16a34a;}
@@ -32,105 +26,80 @@
     .btn-play{position:fixed; bottom:calc(16px + env(safe-area-inset-bottom)); left:50%; transform:translateX(-50%); width:min(92vw, 440px); z-index:1000; background:#22c55e; font-size:1.05rem; text-align:center; text-decoration:none; padding:10px 14px; border-radius:14px; color:#fff; font-weight:800;}
     .toast{position:fixed; left:50%; bottom:24px; transform:translateX(-50%); padding:10px 14px; border-radius:12px; background:rgba(0,0,0,.85); color:#fff; z-index:9999;}
     .hidden{display:none !important;}
-
-    /* ปุ่มแอดมินมุมซ้ายบน */
-    .btn-admin-left{
-      position:fixed; top:calc(10px + env(safe-area-inset-top)); left:12px; z-index:1000;
-      background:#f59e0b; color:#111; font-weight:800; border:none;
-      padding:10px 14px; border-radius:14px; box-shadow:var(--shadow); cursor:pointer;
-    }
+    .btn-admin-left{ position:fixed; top:calc(10px + env(safe-area-inset-top)); left:12px; z-index:1000; background:#f59e0b; color:#111; font-weight:800; border:none; padding:10px 14px; border-radius:14px; box-shadow:var(--shadow); cursor:pointer;}
   </style>
 </head>
 <body>
-  <!-- ปุ่มแอดมิน มุมซ้ายบน -->
-  <button id="btnAdmin" class="btn-admin-left" type="button" aria-label="Admin Reset">ติดต่อแอดมิน</button>
+  <!-- ปุ่มแอดมิน -->
+  <button id="btnAdmin" class="btn-admin-left" type="button">ติดต่อแอดมิน</button>
 
-  <!-- ปุ่มฐานการเรียนรู้ มุมขวาบน -->
-  <a  href="Extention.html" class="btn-float-right"
-   style="display:inline-block;text-decoration:none;padding:10px 14px;border-radius:14px;background:#0ea5e9;color:#fff;font-weight:800;">
-  ฐานการเรียนรู้
-</a>
-
+  <!-- ปุ่มไปฐานการเรียนรู้ -->
+  <a href="Extention.html" class="btn-float-right" style="text-decoration:none;padding:10px 14px;border-radius:14px;background:#0ea5e9;color:#fff;font-weight:800;">
+    ฐานการเรียนรู้
+  </a>
 
   <main class="center">
     <h1 class="title">คิวอาร์โค้ด</h1>
     <h1 class="title" style="color:#FF0000;">*สำคัญห้ามหาย*</h1>
-
     <div id="sizeLabel" class="size">ขนาด: —</div>
-
-    <div class="qr-box">
-      <img id="qrImg" class="qr" alt="QR">
-    </div>
-
+    <div class="qr-box"><img id="qrImg" class="qr" alt="QR"></div>
     <div class="uuid" id="uuidText">—</div>
-
     <div class="btns">
       <button id="btnGen">สุ่มคิวอาร์โค้ด</button>
       <button id="btnSave" class="btn-good hidden">บันทึกรูปคิวอาร์โค้ด</button>
       <button id="btnCopy" class="btn-dark hidden">คัดลอกรหัส</button>
     </div>
   </main>
-
   <a id="btnPlay" href="game.html" class="btn-play">เล่นเกม</a>
 
+  <!-- โหลด Supabase client -->
+  <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+  <script>
+    // 👇 ใส่ค่าของคุณเองที่ได้จาก Supabase
+    const SUPABASE_URL = "https://yowjvmiosrclqstoeqat.supabase.co";
+    const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlvd2p2bWlvc3JjbHFzdG9lcWF0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTgwMDc0OTksImV4cCI6MjA3MzU4MzQ5OX0.p71LqTM5gaJcpaAMMnWzLgsLNAka0nmR7BYntBiSYfU";
+    const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+  </script>
+
+  <!-- สคริปต์หลัก -->
   <script>
   (function(){
-    // ====== Elements ======
     var img = document.getElementById('qrImg');
     var sizeLabel = document.getElementById('sizeLabel');
     var uuidText = document.getElementById('uuidText');
     var btnGen = document.getElementById('btnGen');
     var btnSave = document.getElementById('btnSave');
     var btnCopy = document.getElementById('btnCopy');
-    var btnTask = document.getElementById('btnTask');
-    var btnPlay = document.getElementById('btnPlay');
     var btnAdmin = document.getElementById('btnAdmin');
 
-    // ====== Config ======
-    var QR_PX = 1024;                  // ขนาดภาพ QR จริง (ไฟล์ PNG)
-    var STORAGE_KEY = 'qr_locked_code_v1'; // คีย์เก็บรหัสที่ล็อคต่อเครื่อง
-    const ADMIN_PASS = '12345';   // <<< เปลี่ยนรหัสแอดมินที่นี่
+    var QR_PX = 1024;
+    var STORAGE_KEY = 'qr_locked_code_v1';
+    const ADMIN_PASS = '12345'; // รหัสแอดมิน (แก้ได้)
 
-    // ====== Utils ======
     function toast(msg){
       var el = document.createElement('div');
-      el.className = 'toast';
-      el.textContent = msg;
+      el.className = 'toast'; el.textContent = msg;
       document.body.appendChild(el);
-      setTimeout(function(){ el.remove(); }, 1400);
+      setTimeout(()=>el.remove(), 1400);
     }
-
     function storageGet(){ try{ return localStorage.getItem(STORAGE_KEY) || ''; }catch(e){ return ''; } }
     function storageSet(v){ try{ localStorage.setItem(STORAGE_KEY, v); }catch(e){} }
     function storageDel(){ try{ localStorage.removeItem(STORAGE_KEY); }catch(e){} }
 
-    // รหัสตัวอักษรอ่านง่าย (ไม่มี I/O)
     function shortId(len){
       var alphabet = 'ABCDEFGHJKLMNPQRSTUVWXYZ23456789';
-      var arr = new Uint32Array(len);
-      crypto.getRandomValues(arr);
-      var out = '';
-      for (var i=0;i<len;i++) out += alphabet[arr[i] % alphabet.length];
-      return out;
+      var arr = new Uint32Array(len); crypto.getRandomValues(arr);
+      return Array.from(arr).map(x => alphabet[x % alphabet.length]).join('');
     }
-
-    // อัปเดต label ขนาด
     function updateSizeLabel(){
-      if (img && img.naturalWidth) {
-        sizeLabel.textContent = 'ขนาด: ' + img.naturalWidth + '×' + img.naturalHeight + ' px';
-      } else {
-        sizeLabel.textContent = 'ขนาด: ' + QR_PX + '×' + QR_PX + ' px';
-      }
+      if (img && img.naturalWidth) sizeLabel.textContent = 'ขนาด: ' + img.naturalWidth + '×' + img.naturalHeight + ' px';
+      else sizeLabel.textContent = 'ขนาด: ' + QR_PX + '×' + QR_PX + ' px';
     }
-
-    // วาด QR ด้วยบริการสาธารณะ (PNG)
     function drawQR(text){
       var base = 'https://api.qrserver.com/v1/create-qr-code/';
       img.src = base + '?size=' + QR_PX + 'x' + QR_PX + '&format=png&qzone=2&margin=2&data=' + encodeURIComponent(text);
       sizeLabel.textContent = 'ขนาด: ' + QR_PX + '×' + QR_PX + ' px';
     }
-
-    // UI สถานะล็อกแล้ว
     function applyLockedUI(code){
       if (!code) return;
       uuidText.textContent = code;
@@ -140,50 +109,46 @@
       btnCopy.classList.remove('hidden');
     }
 
-    // สุ่มได้ครั้งเดียวต่อเครื่อง
+    // บันทึกลง Supabase
+    async function saveToSupabase(code){
+      try {
+        let { data, error } = await supabase
+          .from('qrcodes')
+          .insert([{ code: code, user_agent: navigator.userAgent }]);
+        if (error) {
+          console.error(error); toast('❌ บันทึก Supabase ไม่สำเร็จ');
+        } else {
+          toast('✅ บันทึก Supabase แล้ว');
+        }
+      } catch(e){ console.error(e); toast('⚠️ บันทึกผิดพลาด'); }
+    }
+
     function handleGenerateOnce(){
       var existed = storageGet();
-      if (existed) {
-        applyLockedUI(existed);
-        toast('คิวอาถูกล็อคไว้แล้ว');
-        return;
-      }
+      if (existed) { applyLockedUI(existed); toast('คิวอาถูกล็อคไว้แล้ว'); return; }
       var code = shortId(12);
       storageSet(code);
       applyLockedUI(code);
+      saveToSupabase(code);   // <<< บันทึกไป Supabase
       toast('สร้างและล็อคคิวอาแล้ว');
     }
 
     async function savePNG(){
       try{
         if(!img || !img.src){ toast('ยังไม่มีภาพ QR'); return; }
-        var res = await fetch(img.src, {mode:'cors', cache:'no-store'});
-        if(!res.ok) throw new Error('fetch failed');
-        var blob = await res.blob();
-        var url  = URL.createObjectURL(blob);
+        var res = await fetch(img.src); var blob = await res.blob();
+        var url = URL.createObjectURL(blob);
         var name = ('qr-' + (uuidText.textContent || Date.now()) + '.png').replace(/[^a-zA-Z0-9._-]/g,'_');
-        var a = document.createElement('a');
-        a.href = url; a.download = name;
-        document.body.appendChild(a); a.click(); a.remove();
-        setTimeout(function(){ URL.revokeObjectURL(url); }, 2000);
-      }catch(e){
-        window.open(img.src, '_blank'); // กันพังกรณี CORS
-      }
+        var a = document.createElement('a'); a.href = url; a.download = name; document.body.appendChild(a); a.click(); a.remove();
+        setTimeout(()=>URL.revokeObjectURL(url), 2000);
+      }catch(e){ window.open(img.src, '_blank'); }
     }
-
     function copyCode(){
       var txt = uuidText.textContent || '';
       if(!txt){ toast('ยังไม่มีรหัส'); return; }
-      if (navigator.clipboard && navigator.clipboard.writeText){
-        navigator.clipboard.writeText(txt);
-      }else{
-        var ta = document.createElement('textarea');
-        ta.value = txt; document.body.appendChild(ta); ta.select(); document.execCommand('copy'); ta.remove();
-      }
+      navigator.clipboard?.writeText(txt);
       toast('คัดลอกแล้ว');
     }
-
-    // ====== ADMIN: ปุ่มรีเซ็ตด้วยรหัสผ่าน ======
     function adminResetUI(){
       storageDel();
       uuidText.textContent = '—';
@@ -192,43 +157,24 @@
       btnGen.classList.remove('hidden');
       btnSave.classList.add('hidden');
       btnCopy.classList.add('hidden');
-      toast('รีเซ็ตคิวอาแล้ว — สามารถสุ่มใหม่ได้');
+      toast('รีเซ็ตคิวอาแล้ว');
     }
 
-    btnAdmin && btnAdmin.addEventListener('click', ()=>{
+    btnAdmin.addEventListener('click', ()=>{
       var input = prompt('รหัสแอดมิน');
-      if (input === null) return; // กดยกเลิก
-      if ((input || '').trim() === ADMIN_PASS){
+      if (input === null) return;
+      if ((input||'').trim() === ADMIN_PASS){
         if (confirm('ยืนยันรีเซ็ตคิวอาในเครื่องนี้?')) adminResetUI();
-      } else {
-        toast('รหัสแอดมินไม่ถูกต้อง');
-      }
+      } else toast('รหัสแอดมินไม่ถูกต้อง');
     });
 
-    // ====== Events ======
-    img && img.addEventListener('load', updateSizeLabel);
-    btnGen && btnGen.addEventListener('click', handleGenerateOnce);
-    btnSave && btnSave.addEventListener('click', savePNG);
-    btnCopy && btnCopy.addEventListener('click', copyCode);
+    img.addEventListener('load', updateSizeLabel);
+    btnGen.addEventListener('click', handleGenerateOnce);
+    btnSave.addEventListener('click', savePNG);
+    btnCopy.addEventListener('click', copyCode);
 
-    // คลิกรูป: ไม่ให้สุ่มซ้ำ
-    img && img.addEventListener('click', function(){
-      if (storageGet()){
-        toast('คิวอาถูกล็อคแล้ว');
-      } else {
-        toast('กด "สุ่มคิวอา" เพื่อสร้าง');
-      }
-    });
-
-    // ====== First load ======
     var locked = storageGet();
-    if (locked){
-      applyLockedUI(locked);
-    } else {
-      uuidText.textContent = '—';
-      img.removeAttribute('src');
-      updateSizeLabel();
-    }
+    if (locked){ applyLockedUI(locked); } else { uuidText.textContent = '—'; img.removeAttribute('src'); updateSizeLabel(); }
   })();
   </script>
 </body>
